# pytorch-python-vs-cpp-lenet5-model-mnist-dataset

./: .gitignore
cpp/: CMakeLists.txt  dcgan.cpp  main.cpp  main01.cpp
python/: LeNet5_Base.ipynb  MNIST_LeNet5.ipynb  MNIST_LeNet5_Python_vs_C++.ipynb
