cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(dcgan)
list(APPEND CMAKE_PREFIX_PATH /home/kami/libs/c++/libtorch/)
find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(dcgan main01.cpp)
target_link_libraries(dcgan "${TORCH_LIBRARIES}")
target_link_libraries(dcgan ${OpenCV_LIBS})
set_property(TARGET dcgan PROPERTY CXX_STANDARD 17)
message(STATUS "CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}")
message(STATUS "TORCH_LIBRARIES: ${TORCH_LIBRARIES}")
message(STATUS "TORCH_INCLUDE_DIRS: ${TORCH_INCLUDE_DIRS}")
